feat: Добавить ссылку в шапке

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://trufak.github.io/mesto-react/",
+  "homepage": "https://trufak.github.io/react-mesto-auth/",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
